Fixes #95 - Date fields placeholder is not totally visible

--- a/scotty/static/components/candidate-signup/candidate-signup.less
+++ b/scotty/static/components/candidate-signup/candidate-signup.less
@@ -18,7 +18,11 @@
   }
 
   .form-inline input.form-control {
-    min-width: 114.9px;
-    width: 15%
+    min-width: 130px;
+    width: 15%;
+
+    &[type=date] {
+      min-width: 165px;
+    }
   }
 }
